# fireworks-collaboration

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.json  index.html  lcov_phase9.info  package.json  pnpm-lock.yaml  team-config-template.json.example  tsconfig.react.json  vite.config.ts  vitest.setup.ts  workspace.json.example
src/: App.vue  (+2 more)
src-tauri/: COVERAGE.md  Cargo.toml  MUTATION_TESTING.md  build.rs  check_enhanced_parsing.txt  check_output.txt  check_output_v2.txt  check_output_v3.txt  check_output_v4.txt  check_output_v5.txt  check_push_refactor.txt  check_push_v2.txt  check_runner_ext.txt  check_runner_ext_v2.txt  check_runner_ext_v3.txt  check_tests_full.txt  final_check.txt  http_coverage.txt  lib_check.txt  old_push_impl.txt  tauri.conf.json  test_all.txt  test_final.txt  test_final_complete.txt  test_full.txt  test_output.txt  test_output_v2.txt
src-tauri/.cargo/: config.toml
src-tauri/.config/: nextest.toml
src-tauri/_archive/: default_impl.legacy_20250915_135904.rs  http.legacy_20250915_165045.rs  transport.legacy_20250915_151613.rs
src-tauri/benches/: credential_benchmark.rs  event_throughput.rs
src-tauri/capabilities/: default.json
src-tauri/scripts/: coverage_manual.ps1  safe_test_runner.bat  test_windows.ps1
src-tauri/soak/: README.md  main.rs
src-tauri/src/: app.rs  lib.rs  logging.rs  main.rs
src-tauri/src/app/: mod.rs  setup.rs  types.rs
src-tauri/src/core/: mod.rs
src-tauri/src/events/: emitter.rs  mod.rs  structured.rs
src-tauri/src/soak/: aggregator.rs  mod.rs  models.rs  runner.rs  tasks.rs  utils.rs
src-tauri/src/tests_support/: event_assert.rs  mod.rs  repo.rs  wait.rs
src-tauri/tests/: config.rs  core.rs  core_config_template.rs  core_git_utils.rs  core_http.rs  core_ip_pool.rs  core_proxy_detection.rs  core_tls.rs  error_i18n_map.rs  events_contract_snapshot.rs  events_no_legacy_taskerror.rs  events_structured_basic.rs  events_task_lifecycle_git.rs  events_task_lifecycle_git_fail.rs  events_task_lifecycle_git_push.rs  events_task_lifecycle_structured.rs  git2_impl_tests.rs  git_adaptive_tls_rollout_event.rs  git_add.rs  git_add_enhanced.rs  git_branch_checkout.rs  git_clone_fetch_params.rs  git_clone_fetch_params_combo.rs  git_clone_fetch_params_valid.rs  git_clone_preflight.rs  git_commit.rs  git_commit_task.rs  git_e2e_public.rs  git_fetch.rs  git_http_override_clone_only_follow.rs  git_http_override_event.rs  git_http_override_fetch_event_only_max.rs  git_http_override_idempotent.rs  git_http_override_invalid_max_no_event.rs  git_http_override_no_event.rs  git_http_override_push_follow_change.rs  git_impl_tests.rs  git_init.rs  git_local_skeleton.rs  git_partial_clone_filter_capable.rs  (+76 more)
src-tauri/tests/commands/: config.rs  credential.rs  credential_commands_integration.rs  direct_command.rs  git.rs  git_commands.rs  git_wrapper.rs  http_commands.rs  ip_pool.rs  ip_pool_commands.rs  metrics.rs  mod.rs  oauth.rs  oauth_commands.rs  proxy.rs  submodule.rs  submodule_tests.rs  tasks.rs  workspace.rs  workspace_commands.rs
src-tauri/tests/common/: event_assert.rs  fixtures.rs  git_helpers.rs  git_scenarios.rs  http_override_stub.rs  i18n.rs  ip_pool.rs  mock_runner.rs  mod.rs  partial_filter_matrix.rs  partial_filter_support.rs  pipeline.rs  repo_factory.rs  retry_matrix.rs  shallow_matrix.rs  strategy_support.rs  task_wait.rs  test_env.rs
src-tauri/tests/config/: loader_tests.rs  model_tests.rs
src-tauri/tests/core/: app_tests.rs  logging_tests.rs
src-tauri/tests/credential/: advanced_concurrent_tests.rs  audit_advanced_tests.rs  boundary_tests.rs  command_tests.rs  encryption_tests.rs  error_recovery_tests.rs  factory_fallback_tests.rs  file_corruption_tests.rs  key_cache_tests.rs  mod.rs  model_tests.rs  platform_integration.rs  security_audit_tests.rs  security_enhancement_tests.rs  stress_tests.rs  unit_tests.rs
src-tauri/tests/e2e/: e2e_public_git.rs  mod.rs
src-tauri/tests/e2e_app/: basic_flow.rs  mod.rs  pipeline.rs
src-tauri/tests/events/: events_backward_compat.rs  events_structure_and_contract.rs  events_task_lifecycle_git.rs  events_task_lifecycle_structured.rs  mod.rs  structured_tests.rs
src-tauri/tests/git/: adaptive_tls.rs  git_add_and_commit.rs  git_basic_operations.rs  git_branch_and_checkout.rs  git_clone_core.rs  git_clone_partial_filter.rs  git_clone_recursive_submodules.rs  git_clone_shallow_and_depth.rs  git_credential_autofill.rs  git_fetch_core_and_shallow.rs  git_fetch_partial_filter.rs  git_init_and_repo_structure.rs  git_preconditions_and_cancel.rs  git_push_and_retry.rs  git_reset.rs  git_strategy_and_override.rs  git_tag_and_remote.rs  mod.rs  opts.rs  submodule.rs  transport.rs  utils.rs
src-tauri/tests/http/: client_tests.rs  types_tests.rs
src-tauri/tests/ip_pool/: cache_tests.rs  circuit_breaker_tests.rs  config_tests.rs  events_tests.rs  history_tests.rs  manager_tests.rs  preheat_tests.rs
src-tauri/tests/metrics/: mod.rs
src-tauri/tests/proxy/: app_commands_integration.rs  config.rs  config_tests.rs  detector.rs  detector_tests.rs  errors_tests.rs  events.rs  events_tests.rs  http_connector.rs  manager.rs  manager_commands.rs  manager_recovery.rs  manager_tests.rs  mod.rs  mod_tests.rs  socks5_connector.rs  state.rs  system_detector_tests.rs  unit_tests.rs
src-tauri/tests/quality/: error_and_i18n.rs  ip_pool_soak.rs  mod.rs
src-tauri/tests/soak/: mod.rs
src-tauri/tests/submodule/: mock_tests.rs  mod.rs  model_tests.rs  operations_tests.rs
src-tauri/tests/support/: event_assert.rs  mod.rs
src-tauri/tests/tasks/: config_model.rs  credential_file_store.rs  events_system.rs  git_conflict.rs  git_operations.rs  helpers.rs  ip_pool_event_edge.rs  ip_pool_event_emit.rs  ip_pool_fault_injection.rs  ip_pool_manager.rs  ip_pool_mock.rs  ip_pool_preheat_events.rs  metrics_aggregate.rs  mod.rs  proxy_config.rs  submodule_ops.rs  task_registry_and_service.rs  unit_tests.rs  workspace_batch.rs  workspace_model.rs
src-tauri/tests/workspace/: config_tests.rs  manager_tests.rs  mod.rs  model_tests.rs  status_utils_tests.rs  storage_tests.rs
(+533 files in other folders)
