[package]
name = "fireworks-collaboration"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# 仅保留默认 rlib（移除多 crate-type 以避免重复宏定义冲突）
name = "fireworks_collaboration_lib"

[features]
# 调整：默认不启用 tauri 相关依赖，便于直接 cargo test
# 运行应用时使用: cargo run --features tauri-app 或 cargo tauri dev --features tauri-app
default = []
# 启用 tauri-app 时自动激活相关可选依赖
tauri-app = [
  "tauri",
  "tauri-plugin-opener",
  "tauri-plugin-shell",
  "tauri-plugin-fs",
  "tauri-plugin-http"
]
# 基准测试（需手动启用）
bench = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 可选 Tauri 依赖（运行应用时启用 feature=tauri-app）
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-http = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"
# 新增：日志与错误、工具类依赖（P0.1）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
ring = { version = "0.17" }
x509-parser = { version = "0.15", default-features = false }
# 新增异步运行时依赖（修复 tokio / tokio_util 未解析错误）
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
# TLS & Certs (P0.3)
rustls = { version = "0.21", features = ["dangerous_configuration"] }
webpki-roots = "0.25"
# HTTP client core (P0.4)
hyper = { version = "0.14", features = ["client", "http1", "tcp", "stream"] }
tokio-rustls = "0.24"
url = "2"
ipnet = "2"
## MP0.4: 移除 gix 依赖，统一到 git2-rs

# 新增：git2-rs（MP0.1 引入，仅骨架，不改变行为）
git2 = { version = "0.19" }
rand = { version = "0.8" }
dirs-next = "2"
once_cell = "1"
sha1 = "0.10"
tempfile = "3"
metrics = "0.21"
# P6.0: 凭证存储与安全管理相关依赖
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
# 与主运行时一致，测试中使用 current_thread 以减少潜在冲突
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "net"] }
futures = "0.3"
once_cell = "1"
proptest = "1"
criterion = { version = "0.5", features=["html_reports"] }
ctor = "0.2"
rcgen = "0.12"

[[bin]]
name = "adaptive_tls_soak"
path = "soak/main.rs"

# Windows specific dependencies for registry access
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winreg", "winnt", "minwindef"] }
winreg = "0.52"

[[test]]
name = "git_add_and_commit"
path = "tests/git/git_add_and_commit.rs"
required-features = []

[[test]]
name = "credential"
path = "tests/credential/mod.rs"
required-features = []

[[test]]
name = "git_branch_and_checkout"
path = "tests/git/git_branch_and_checkout.rs"
required-features = []

[[test]]
name = "git_clone_shallow_and_depth"
path = "tests/git/git_clone_shallow_and_depth.rs"
required-features = []

[[test]]
name = "git_fetch_core_and_shallow"
path = "tests/git/git_fetch_core_and_shallow.rs"
required-features = []

[[test]]
name = "git_basic_operations"
path = "tests/git/git_basic_operations.rs"
required-features = []

[[test]]
name = "git_preconditions_and_cancel"
path = "tests/git/git_preconditions_and_cancel.rs"
required-features = []

[[test]]
name = "git_push_and_retry"
path = "tests/git/git_push_and_retry.rs"
required-features = []

[[test]]
name = "git_strategy_and_override"
path = "tests/git/git_strategy_and_override.rs"
required-features = []

[[test]]
name = "git_tag_and_remote"
path = "tests/git/git_tag_and_remote.rs"
required-features = []

[[test]]
name = "http_adaptive_tls"
path = "tests/http_adaptive_tls.rs"
required-features = []

[[test]]
name = "events_backward_compat"
path = "tests/events/events_backward_compat.rs"
required-features = []

[[test]]
name = "events_structure_and_contract"
path = "tests/events/events_structure_and_contract.rs"
required-features = []

[[test]]
name = "events_task_lifecycle_git"
path = "tests/events/events_task_lifecycle_git.rs"
required-features = []

[[test]]
name = "error_and_i18n"
path = "tests/quality/error_and_i18n.rs"
required-features = []

[[test]]
name = "ip_pool_soak"
path = "tests/quality/ip_pool_soak.rs"
required-features = []

[[test]]
name = "task_registry_and_service"
path = "tests/tasks/task_registry_and_service.rs"
required-features = []

[[test]]
name = "ip_pool_manager"
path = "tests/tasks/ip_pool_manager.rs"
required-features = []

[[test]]
name = "ip_pool_fault_injection"
path = "tests/tasks/ip_pool_fault_injection.rs"
required-features = []

[[test]]
name = "tasks_helpers"
path = "tests/tasks_helpers.rs"
required-features = []

[[test]]
name = "e2e_public_git"
path = "tests/e2e/e2e_public_git.rs"
required-features = []

[[test]]
name = "core"
path = "tests/core.rs"
required-features = []

[[test]]
name = "proxy_config"
path = "tests/proxy/config.rs"
required-features = []

[[test]]
name = "proxy_detector"
path = "tests/proxy/detector.rs"
required-features = []

[[test]]
name = "proxy_events"
path = "tests/proxy/events.rs"
required-features = []

[[test]]
name = "proxy_state"
path = "tests/proxy/state.rs"
required-features = []

[[test]]
name = "proxy_socks5_connector"
path = "tests/proxy/socks5_connector.rs"
required-features = []

[[test]]
name = "proxy_http_connector"
path = "tests/proxy/http_connector.rs"
required-features = []

[[test]]
name = "proxy_manager"
path = "tests/proxy/manager.rs"
required-features = []

[[test]]
name = "git_transport"
path = "tests/git/transport.rs"
required-features = []

[[test]]
name = "config"
path = "tests/config.rs"
required-features = []

[[test]]
name = "http"
path = "tests/http.rs"
required-features = []

[[test]]
name = "git_opts"
path = "tests/git/opts.rs"
required-features = []

[[test]]
name = "ip_pool"
path = "tests/ip_pool.rs"
required-features = []

[[test]]
name = "soak"
path = "tests/soak/mod.rs"
required-features = []
